--- a/TESTING_ (1).ipynb
+++ b/TESTING_ (1).ipynb
@@ -891,18 +891,18 @@
     {
       "cell_type": "code",
       "source": [
-        "self_join= spark.sql(\"SELECT * FROM PritamTable e LEFT OUTER JOIN ALTENRV d ON e.S_no == d.watch_count\") \\\n",
-        ".show(truncate=False)"
+        "twice = spark.sql(\"SELECT * FROM ALTENRV e LEFT OUTER JOIN ALTENRV d ON e.S_no == d.watch_count\")\n",
+        "twice.show(truncate=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 502
+          "height": 571
         },
         "id": "CtaHFkk_g6fr",
-        "outputId": "f4110c5d-00bb-4dd0-f423-005eb2a21c4c"
+        "outputId": "55657605-d0af-490c-dc9c-043b3499adf1"
       },
-      "execution_count": 179,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "error",
@@ -911,11 +911,11 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-179-4fc4e91b02f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mself_join\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * FROM PritamTable e LEFT OUTER JOIN ALTENRV d ON e.S_no == d.watch_count\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtruncate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-180-b00d235cd64b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtwice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * FROM ALTENRV e LEFT OUTER JOIN ALTENRV d ON e.S_no == d.watch_count\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtwice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtruncate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pyspark/sql/session.py\u001b[0m in \u001b[0;36msql\u001b[0;34m(self, sqlQuery, **kwargs)\u001b[0m\n\u001b[1;32m   1032\u001b[0m             \u001b[0msqlQuery\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mformatter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlQuery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1033\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1034\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jsparkSession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlQuery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1035\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1036\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1319\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1320\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1321\u001b[0;31m         return_value = get_return_value(\n\u001b[0m\u001b[1;32m   1322\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[1;32m   1323\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    194\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 196\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    197\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAnalysisException\u001b[0m: Table or view not found: PritamTable; line 1 pos 14;\n'Project [*]\n+- 'Join LeftOuter, ('e.S_no = 'd.watch_count)\n   :- 'SubqueryAlias e\n   :  +- 'UnresolvedRelation [PritamTable], [], false\n   +- SubqueryAlias d\n      +- SubqueryAlias altenrv\n         +- View (`ALTENRV`, [Sno#679,Gender#680,Movie_id#681,rating#682,watch_count#683])\n            +- Filter atleastnnonnulls(5, Sno#679, Gender#680, Movie_id#681, rating#682, watch_count#683)\n               +- Relation [Sno#679,Gender#680,Movie_id#681,rating#682,watch_count#683] csv\n"
+            "\u001b[0;31mAnalysisException\u001b[0m: Column 'e.S_no' does not exist. Did you mean one of the following? [e.Sno, d.Sno, e.Gender, e.rating, d.Gender, d.rating, e.Movie_id, d.Movie_id, e.watch_count, d.watch_count]; line 1 pos 53;\n'Project [*]\n+- 'Join LeftOuter, ('e.S_no = watch_count#873)\n   :- SubqueryAlias e\n   :  +- SubqueryAlias altenrv\n   :     +- View (`ALTENRV`, [Sno#679,Gender#680,Movie_id#681,rating#682,watch_count#683])\n   :        +- Filter atleastnnonnulls(5, Sno#679, Gender#680, Movie_id#681, rating#682, watch_count#683)\n   :           +- Relation [Sno#679,Gender#680,Movie_id#681,rating#682,watch_count#683] csv\n   +- SubqueryAlias d\n      +- SubqueryAlias altenrv\n         +- View (`ALTENRV`, [Sno#869,Gender#870,Movie_id#871,rating#872,watch_count#873])\n            +- Filter atleastnnonnulls(5, Sno#869, Gender#870, Movie_id#871, rating#872, watch_count#873)\n               +- Relation [Sno#869,Gender#870,Movie_id#871,rating#872,watch_count#873] csv\n"
           ]
         }
       ]
@@ -1003,9 +1003,46 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "Newdataframe = dataframe.toPandas()\n",
+        "print(Newdataframe)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VjkJ8lFYFoud",
+        "outputId": "8360d332-fd4f-4217-e5e7-a8762eaef788"
+      },
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       Sno Gender  Movie_id  rating  watch_count\n",
+            "0        1      F         1      10        48067\n",
+            "1        2      M        56      16        70072\n",
+            "2        3      M        25      15        55117\n",
+            "3        4      M        45       7         2460\n",
+            "4        5      M        25      20        55455\n",
+            "...    ...    ...       ...     ...          ...\n",
+            "5969  6036      F        25      15        32603\n",
+            "5970  6037      F        45       1        76006\n",
+            "5971  6038      F        56       1        14706\n",
+            "5972  6039      F        45       0         1060\n",
+            "5973  6040      M        25       6        11106\n",
+            "\n",
+            "[5974 rows x 5 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "VjkJ8lFYFoud"
+        "id": "9AlTLrjHGSiC"
       },
       "execution_count": null,
       "outputs": []
