--- a/TESTING_ (1).ipynb
+++ b/TESTING_ (1).ipynb
@@ -1046,6 +1046,35 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "QUES 8 : I. To determine the entire amount of each product's exports to each nation"
+      ],
+      "metadata": {
+        "id": "M4ziobYKGeca"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = [\n",
+        "(\"Banana\",1000,\"USA\"), (\"Carrots\",1500,\"USA\"), (\"Beans\",1600,\"USA\"),\n",
+        "(\"Orange\",2000,\"USA\"),(\"Orange\",2000,\"USA\"),(\"Banana\",400,\"China\"),\n",
+        "(\"Carrots\",1200,\"China\"),(\"Beans\",1500,\"China\"),(\"Orange\",4000,\"China\"),\n",
+        "(\"Banana\",2000,\"Canada\"),(\"Carrots\",2000,\"Canada\"),(\"Beans\",2000,\"Mexico\")\n",
+        "]\n",
+        "\n",
+        "columns= [\"Product\",\"Amount\",\"Country\"]\n",
+        "\n",
+        "df=spark.createDataFrame(data=data,schema=columns)"
+      ],
+      "metadata": {
+        "id": "hzS195e3GgaR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
