--- a/TESTING_ (1).ipynb
+++ b/TESTING_ (1).ipynb
@@ -26,7 +26,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +66,7 @@
           "height": 73
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -289,7 +289,7 @@
           "height": 219
         }
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,7 +349,7 @@
       "metadata": {
         "id": "s6CIbtnIN5lf"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +365,7 @@
         },
         "outputId": "ac8281b7-9692-4c2f-f130-6de37e58111d"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +385,7 @@
       "metadata": {
         "id": "FSmX7sJYg7_k"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,7 +401,7 @@
         "id": "ZW4lNB_zmIOI",
         "outputId": "ec59a160-b069-4624-f283-8689368f371b"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +423,7 @@
       "metadata": {
         "id": "9AUPG29UzcE4"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +442,7 @@
         "id": "XbppWPSm0A6_",
         "outputId": "91b52f31-682e-4517-a46e-3a064f5efb88"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +490,7 @@
       "metadata": {
         "id": "7Pr5-1wk0OaK"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -507,7 +507,7 @@
       "metadata": {
         "id": "RxL5DeIA0OXw"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -523,7 +523,7 @@
         "id": "J-GzFasp0OU5",
         "outputId": "a2d3df6d-187a-4c55-8cb1-0076d6ee7674"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +572,7 @@
         "id": "KyHjjrQ60OSZ",
         "outputId": "99da7d87-1d1b-45d5-f975-fb317f722a76"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +621,7 @@
         "id": "N0sJ5FgR2YNd",
         "outputId": "d7d40352-8b5a-4580-d6f3-9d13c148f4d8"
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +672,7 @@
         "id": "y75t-V1-0OPn",
         "outputId": "20716022-1f3f-4acc-a83c-ac75e07a5299"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +725,7 @@
       "metadata": {
         "id": "SkD4dUMt0N6k"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -740,7 +740,7 @@
         "id": "E2IVj4hgmNdo",
         "outputId": "ef643023-2032-4526-ce70-1f1dea0d87aa"
       },
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +770,7 @@
       "metadata": {
         "id": "x0J7n51Pg79M"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -798,7 +798,7 @@
       "metadata": {
         "id": "Bb0BeXn7g736"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -824,7 +824,7 @@
         "id": "_YiIBkHJg7pT",
         "outputId": "16bd1c25-4c6d-4dc8-e928-866bdb81b22d"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -874,7 +874,7 @@
         },
         "outputId": "416a6190-9591-4d71-ec9f-3902bac87fd0"
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,7 +902,7 @@
         "id": "CtaHFkk_g6fr",
         "outputId": "55657605-d0af-490c-dc9c-043b3499adf1"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -925,12 +925,12 @@
       "source": [
         "\n",
         "\n",
-        "spark.sql(\"select * from PritamTable union select * from PritamTable\").show()"
+        "spark.sql(\"select * from ALTENRV union select * from ALTENRV\").show()"
       ],
       "metadata": {
         "id": "_t7jCGd6uvxT"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -947,7 +947,7 @@
         "id": "7Ja7DTP_u3W7",
         "outputId": "050771fc-dbe4-41d4-e07f-a3009002c2c2"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1014,7 +1014,7 @@
         "id": "VjkJ8lFYFoud",
         "outputId": "8360d332-fd4f-4217-e5e7-a8762eaef788"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1068,7 +1068,15 @@
         "\n",
         "columns= [\"Product\",\"Amount\",\"Country\"]\n",
         "\n",
-        "df=spark.createDataFrame(data=data,schema=columns)"
+        "df=spark.createDataFrame(data=data,schema=columns)\n",
+        "\n",
+        "Product_df = df.groupBy(\"Product\",\"Country\") \\\n",
+        "      .sum(\"Amount\") \\\n",
+        "      .groupBy(\"Product\") \\\n",
+        "      .pivot(\"Country\") \\\n",
+        "      .sum(\"sum(Amount)\")\n",
+        "Product_df.printSchema()\n",
+        "Product_df.show(truncate=False)\n"
       ],
       "metadata": {
         "id": "hzS195e3GgaR"
